<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/BankGreenBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@color/BankGreen"
            android:id="@+id/toolbarTransactionsPage"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageButton
            android:id="@+id/deleteAccountButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_delete_button"
            android:layout_below="@+id/toolbarTransactionsPage"
            android:layout_marginStart="5dp"/>

        <ImageButton
            android:id="@+id/toGraphView"
            android:onClick="graphActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/graph"
            android:layout_below="@+id/toolbarTransactionsPage"
            android:layout_marginTop="5dp"
            android:layout_marginStart="340dp"
            />

        <TextView
            android:id="@+id/NameOfAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarTransactionsPage"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:textSize="40sp"
            android:typeface="serif"
            android:text="@string/account_name" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/NameOfAccount"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:typeface="serif"
            android:text="@string/balance" />

        <View
            android:id="@+id/horizontalDivider"
            android:layout_below="@id/balance"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/BankGreen"
            />

        <TextView
            android:id="@+id/historyHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontalDivider"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:typeface="serif"
            android:text="@string/transaction_history" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@id/historyHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/TransactionRecycler"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TransactionRecycler"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <Button
                android:text="@string/deposit"
                android:id="@+id/Btn_Deposit"
                android:layout_width="170dp"
                android:layout_height="@dimen/createAcct_height"
                android:layout_weight="0.5"
                android:contentDescription="@string/new_account"
                android:padding="0dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_blank"
                />

            <Button
                android:text="@string/withdraw"
                android:id="@+id/Btn_Withdraw"
                android:layout_width="170dp"
                android:layout_height="@dimen/createAcct_height"
                android:layout_weight="0.5"
                android:contentDescription="@string/new_account"
                android:padding="0dp"
                android:layout_centerInParent="true"
                android:background="@drawable/button_blank"
                />


            <Button
                android:text="@string/back"
                android:id="@+id/Btn_AccountBack"
                android:layout_width="170dp"
                android:layout_height="@dimen/createAcct_height"
                android:layout_weight="0.5"
                android:contentDescription="@string/new_account"
                android:padding="0dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_blank"
                android:onClick="toMainActivity"
                />

        </LinearLayout>



    </RelativeLayout>
</ScrollView>