<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/BankGreenBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@color/BankGreen"
            android:id="@+id/toolbarTransactionsPage"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo" />

        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/transactionActivityDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarTransactionsPage"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:textSize="40sp"
            android:typeface="serif"
            android:text="@string/datetime" />

        <ImageButton
            android:id="@+id/deleteTransactionButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_delete_button"
            android:layout_below="@+id/toolbarTransactionsPage"
            android:layout_marginStart="5dp" />

        <View
            android:id="@+id/transactionDivider"
            android:layout_below="@id/transactionActivityDate"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/BankGreen"/>

        <TextView
            android:id="@+id/transactionActivityAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/transactionDivider"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:typeface="serif"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/transactionActivityMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transactionActivityAmt"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:textSize="20sp"
            android:typeface="serif"
            android:text="@string/default_memo" />

        <TextView
            android:id="@+id/transactionActivityStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transactionActivityMessage"
            android:padding="20dp"
            android:textSize="20sp"
            android:typeface="serif"
            android:text="@string/status" />


        <Button
            android:text="@string/back"
            android:id="@+id/Btn_TransactionBack"
            android:layout_width="170dp"
            android:layout_below="@+id/transactionActivityStatus"
            android:layout_centerInParent="true"
            android:layout_height="@dimen/createAcct_height"
            android:layout_weight="0.5"
            android:contentDescription="@string/new_account"
            android:padding="0dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_blank"
            android:onClick="toAccountActivity"
            />

    </RelativeLayout>
</ScrollView>