<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/BankGreenBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/BankGreen"
        android:id="@+id/toolbar"
        >

        <ImageView
            android:id="@+id/MainLogo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/MainAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        android:typeface="serif"
        android:text="@string/accounts" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:padding="10dp"
        android:id="@+id/AccountRecycler"/>

    <ImageButton
        android:id="@+id/CreateAcct"
        android:layout_width="170dp"
        android:layout_height="@dimen/createAcct_height"
        android:layout_below="@+id/AccountRecycler"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/new_account"
        android:padding="0dp"
        android:src="@drawable/button" />

</RelativeLayout>
</ScrollView>